<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project Silence</string>
    <string name="title">Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="mute_sound">Mute Sound?</string>
    <string name="send_text">Send Text?</string>
    <string name="recurrence_frequency">Recurrence Frequency</string>
    <string name="end_recurring_date">End Recurring</string>
    <string name="title_hint">Enter Title</string>
    <string name="days">Days</string>
    <string name="choose_start_date">Choose Start Date</string>
    <string name="choose_end_date">Choose End Date</string>
    <string name="new_event_button">Add New Event</string>
    <string name="choose_start_time_string">Choose Start Time</string>
    <string name="choose_end_time_string">Choose End Time</string>
    <string name="cancel_string">Cancel</string>
    <string name="reset_string">Reset</string>
    <string name="submit_string">Submit</string>
    <string name="endDate">End Date</string>
    <string name="no_start_date_set_string">0000-00-00</string>
    <string name="no_start_time_set_string">00:00:00</string>
    <string name="no_end_date_set_string">0000-00-00</string>
    <string name="no_end_time_set_string">00:00:00</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
